--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
+  flutter_local_notifications: ^17.2.4
+  timezone: ^0.9.4
+
+  path_provider: ^2.1.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
