--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,5 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
+kotlin.compiler.execution.strategy=in-process
+kotlin.daemon.jvmargs=-Xmx2048m
+org.gradle.daemon=false
 android.useAndroidX=true
